# uke_japanese

./: README.md  main.py  pyproject.toml
japanese/: embedding.py  ranker.py  tokenizer.py
